--- a/style.css
+++ b/style.css
@@ -5,6 +5,17 @@ body {
 #calcBody {
     width: 500px;
     height: 900px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
     display: flex;
-    
+    flex-direction: column;
+
+}
+
+button {
+    width: 100px;
+    height: 50px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 8px black;
 }
