--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+* {
+    font-family: ubuntu, sans-serif;
+    font-size: 24px;
+}
+
 body {
     background-color: #7B8183;
 }
 
 #calcBody {
-    width: 500px;
+    width: 450px;
     height: 900px;
     margin-left: auto;
     margin-right: auto;
@@ -13,7 +18,22 @@ body {
 
 }
 
+#display {
+    width: 100%;
+    height: 70px;
+    background-color: #DAEBFA;
+    text-align: right;
+    font-size: 32px;
+}
+
+#buttonArea {
+    width: 100%;
+    display: flex; 
+    flex-wrap: wrap;
+}
+
 button {
+    flex: auto;
     width: 100px;
     height: 50px;
     border-radius: 10px;
