--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #7B8183;
+    background-color: #8E90A4;
 }
 
 #calcBody {
@@ -14,20 +14,22 @@ body {
     margin-right: auto;
     margin-top: 100px;
     padding: 30px;
-    background-color: #8E90A4;
+    background-color: #C7C6C6;
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 20px;
     border-radius: 10px;
+    box-shadow: 1px 1px 8px black;
 }
 
 #display {
     width: 100%;
-    height: 70px;
+    height: 50px;
+    padding: 10px;
     background-color: #DAEBFA;
     text-align: right;
-    font-size: 32px;
+    font-size: 52px;
 }
 
 #buttonArea {
@@ -50,5 +52,5 @@ button {
 }
 
 .aux {
-    background-color: #EE9ABD;
+    background-color: #BC81BF;
 }
