--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #8E90A4;
+    background-color: #8e90a4;
 }
 
 #calcBody {
@@ -14,7 +14,7 @@ body {
     margin-right: auto;
     margin-top: 100px;
     padding: 30px;
-    background-color: #C7C6C6;
+    background-color: #c7c6c6;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -27,14 +27,14 @@ body {
     width: 100%;
     height: 50px;
     padding: 10px;
-    background-color: #DAEBFA;
+    background-color: #daebfa;
     text-align: right;
     font-size: 52px;
 }
 
 #buttonArea {
     width: 100%;
-    display: flex; 
+    display: flex;
     flex-wrap: wrap;
     gap: 5px;
 }
@@ -47,10 +47,11 @@ button {
     box-shadow: 1px 1px 4px black;
 }
 
-.operator {
-    background-color: #9AB7EE;
+.operator,
+.equals {
+    background-color: #9ab7ee;
 }
 
 .aux {
-    background-color: #BC81BF;
+    background-color: #bc81bf;
 }
